fixed alignment with pages and globally imported global css

--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -1,18 +1,12 @@
 footer {
   border-top: 1px solid #e5e5e5;
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  box-sizing: border-box;
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
   background-color: white;
-  font-family: "Inter", sans-serif;
+  margin-top: auto;
 }
 
 h3 {
